# sudostake_contracts_near

./: .gitignore  Cargo.toml  README.md  TECHNICAL_ARCHITECTURE_AND_STACK.md  build.sh  factory_test.sh  requirements.txt  rust-toolchain.toml  test.sh  value_flows.md  vault_test.sh
.cargo/: config.toml
.github/workflows/: agent-tests.yml  ci.yml
agent/: build.sh  metadata.json
agent/docs/: README.md
agent/jobs/: init_vector_store_job.py
agent/src/: agent.py  helpers.py  token_registry.py  tools.py
agent/src/tools/: __init__.py  active_loan.py  balance.py  base.py  context.py  delegation.py  liquidity_request.py  minting.py  store.py  summary.py  transfer.py  vault.py  withdrawal.py
agent/tests/: test_active_loan.py  test_helpers.py  test_init_vector_store.py  test_liquidity_request.py  test_token_registry.py  test_tools.py  test_utils.py  test_vault.py
common/: Cargo.toml
common/src/: lib.rs
contracts/factory/: Cargo.toml  README.md
contracts/factory/src/: contract.rs  lib.rs  unit_test.rs
contracts/factory/tests/: integration_test.rs
contracts/mock_staking_pool/: Cargo.toml
contracts/mock_staking_pool/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: accept_counter_offer.rs  cancel_counter_offer.rs  cancel_liquidity_request.rs  claim_unstaked.rs  claim_vault.rs  contract.rs  delegate.rs  ext.rs  ft_receiver.rs  internal.rs  lib.rs  process_claims.rs  repay_loan.rs  request_liquidity.rs  retry_refunds.rs  takeover.rs  transfer_ownership.rs  try_accept_liquidity_request.rs  try_add_counter_offer.rs  types.rs  undelegate.rs  unit_test.rs  view.rs  withdraw_balance.rs
contracts/vault/src/ft/: mod.rs  receiver.rs  try_accept_liquidity_request.rs
contracts/vault/src/types/: constants.rs  enums.rs  messages.rs  mod.rs  storage_keys.rs  structs.rs
contracts/vault/src/unit/: accept_counter_offer_unit_tests.rs  cancel_counter_offer_unit_tests.rs  cancel_liquidity_request_tests.rs  cancel_takeover_unit_tests.rs  claim_unstaked.rs  claim_unstaked_unit_tests.rs  claim_vault_unit_tests.rs  delegate.rs  delegate_unit_tests.rs  ext_callbacks.rs  ft_receiver_unit_tests.rs  initialization.rs  list_for_takeover_unit_tests.rs  mod.rs  process_claims_unit_tests.rs  reconcile_unstake_entries.rs  repay_loan_unit_tests.rs  request_liquidity_tests.rs  request_liquidity_unit_tests.rs  retry_refunds_unit_tests.rs  test_utils.rs  transfer_ownership.rs  try_accept_liquidity_request_tests.rs  try_add_counter_offer_unit_tests.rs  undelegate.rs  undelegate_unit_tests.rs  view_unit_tests.rs  withdraw_balance.rs  withdraw_balance_unit_tests.rs
contracts/vault/tests/: accept_counter_offer_tests.rs  accept_liquidity_request_tests.rs  add_counter_offer_tests.rs  cancel_counter_offer_tests.rs  cancel_liquidity_request_tests.rs  claim_tests.rs  claim_unstaked_tests.rs  claim_vault_tests.rs  delegate_tests.rs  ft_receiver_tests.rs  initialization_tests.rs  integration_test.rs  open_counter_offer_tests.rs  process_claims_tests.rs  repay_loan_tests.rs  request_liquidity_tests.rs  retry_refund_tests.rs  takeover_tests.rs  test_lock.rs  test_utils.rs  transfer_ownership_tests.rs  undelegate_tests.rs  withdraw_balance_tests.rs
docs/: TECHNICAL_ARCHITECTURE_AND_STACK.md  value_flows.md
res/: factory.wasm  factory_abi.json  factory_abi.zst  fungible_token.wasm  mock_staking_pool.wasm  vault.wasm
scripts/: build.sh  factory_test.sh  prepare_res_dirs.sh  set_kernel_params.sh  setup.sh  test_contract.sh  vault_test.sh
