[workspace]
members = ["contracts/factory", "contracts/vault"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/sudostake/sudostake_contracts_near"


[workspace.dependencies]
borsh = "1.2.0"
borsh-derive = "1.2.0"
near-sdk = { version = "5.11.0", features = ["unit-testing", "legacy",] }
near-workspaces = { version = "0.18.0", features = ["unstable"] }
tokio = { version = "1.44.1", features = ["full"] }

