[workspace]
members = ["contracts/*"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/sudostake/sudostake_contracts_near"

[workspace.dependencies]
borsh = "1.2.0"
borsh-derive = "1.2.0"
near-sdk = { version = "5.11.0", features = ["unit-testing", "legacy"] }
near-contract-standards = "5.11.0"
near-workspaces = { version = "0.19.0", features = ["unstable"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"