[package]
name = "factory"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sudostake/sudostake_contracts_near"

[dependencies]
borsh = { workspace = true }
borsh-derive = { workspace = true }
near-sdk = { workspace = true }

[dev-dependencies]
near-workspaces = { workspace = true }
tokio = { workspace = true }

[lib]
crate-type = ["cdylib"]

# Required NEAR metadata
[package.metadata.near]
version = "5.11.0"

# Fields to configure reproducible WASM build according to NEP-330
[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.4-rust-1.85.1"
image_digest = "sha256:1f8b71742802f38990d442e8678aa4c0cd1c8317dd3ff493f41c079675d4f35b"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
      "--locked",
]
