[package]
name = "factory"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sudostake/sudostake_contracts_near"

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { workspace = true }
borsh-derive = { workspace = true }
near-sdk = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
near-workspaces = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
integration-test = []

[package.metadata.near]
version = "5.11.0"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "bash",
    "-lc",
    "cd /home/near/code && cargo near build non-reproducible-wasm --locked --manifest-path contracts/vault/Cargo.toml --out-dir res && cargo near build non-reproducible-wasm --locked --manifest-path contracts/factory/Cargo.toml --out-dir res",
]
